[gd_scene load_steps=5 format=3 uid="uid://cp8pxjs8dnews"]

[ext_resource type="Script" path="res://Scripts/UI/hud.gd" id="1_dnxxx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_43w4i"]
bg_color = Color(0.988235, 0.847059, 0.768627, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.513851, 0.142262, 0.112337, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
expand_margin_left = 12.0
expand_margin_top = 8.0
expand_margin_right = 12.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x7pr7"]
bg_color = Color(0.986421, 0.84527, 0.769849, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.425417, 0.167784, 0.111456, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 8.0
expand_margin_top = 4.0
expand_margin_right = 8.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i1s1h"]
bg_color = Color(0.986421, 0.84527, 0.769849, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.425417, 0.167784, 0.111456, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 8.0
expand_margin_top = 4.0
expand_margin_right = 8.0
expand_margin_bottom = 4.0

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dnxxx")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = 379.0
offset_top = 605.0
offset_right = 775.0
offset_bottom = 653.0
theme_override_styles/panel = SubResource("StyleBoxFlat_43w4i")

[node name="StaminaBar" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Stamina" type="Label" parent="PanelContainer/StaminaBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0.460107, 0.123343, 0.0962753, 1)
theme_override_font_sizes/font_size = 24
text = "Stamina: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/StaminaBar"]
modulate = Color(0, 0.96985, 0.264798, 1)
custom_minimum_size = Vector2(256, 24)
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
value = 0.49
show_percentage = false

[node name="DateTracker" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = 27.0
offset_top = 31.0
offset_right = 209.0
offset_bottom = 80.0
theme_override_styles/panel = SubResource("StyleBoxFlat_x7pr7")

[node name="Label" type="Label" parent="DateTracker"]
layout_mode = 2
theme_override_colors/font_color = Color(0.458824, 0.121569, 0.0980392, 1)
theme_override_font_sizes/font_size = 32
text = "Dates: #/#2"
vertical_alignment = 1

[node name="Time" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 989.0
offset_top = 30.0
offset_right = 1121.0
offset_bottom = 82.0
theme_override_styles/panel = SubResource("StyleBoxFlat_i1s1h")

[node name="RichTextLabel" type="RichTextLabel" parent="Time"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[img=32x32]icon.svg[/img] 10:00"

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 101.0
offset_right = 254.0
offset_bottom = 272.0
theme_override_styles/panel = SubResource("StyleBoxFlat_x7pr7")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.454902, 0.396078, 0.364706, 1)
theme_override_colors/font_shadow_color = Color(0.907334, 0.394844, 0.181465, 1)
text = "Preferences: "

[node name="ItemList" type="ItemList" parent="PanelContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
theme_override_colors/guide_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0.897283, 0.673391, 0.656556, 0)
theme_override_colors/font_selected_color = Color(0.907334, 0.394844, 0.181465, 1)
theme_override_colors/font_color = Color(0.99492, 0.696222, 0.604588, 0.996078)
theme_override_colors/font_hovered_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 18
item_count = 2
item_0/text = "Test 1"
item_1/text = "Test 2"
